# sigma-detection-pipeline

./: .gitignore  BLOG_POST.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
rules/credential_access/: lsass_memory_access.yml
rules/defense_evasion/: rundll32_suspicious_execution.yml
rules/discovery/: account_enumeration.yml
rules/execution/: encoded_powershell.yml
rules/persistence/: registry_run_key.yml  scheduled_task_creation.yml
src/: __init__.py  cli.py  converter.py  coverage.py  tester.py  validator.py
tests/: test_detections.py
tests/log_samples/: credential_access.json  defense_evasion.json  discovery.json  execution.json  persistence.json  registry_run_key.json
